--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Компании</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <p>
-        Дата подписания, время: 07.04.2025 11:12
-        Наименование: ТОО “Научно-производственный центр агроинженерии”
-        Юридический адрес: г. Алматы, пр. Райымбека дом 312
-        БИН 071140007530
-        Свид.о пост. на учет по НДС
-        Серия 60001 №120 4003 от 10.01.2019 г.
-        ИИК  KZ096010131000112013 АО «Народный Банк Казахстана»
-        в г.Алматы  ул.Розыбакиева 101 БИК HSBKKZKX
-        Должность: Начальник отдела по подтверждению  соответствии сертификации продукции 
-        ФИО на ЭЦП: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ
-        Сроки действия ЭЦП: 31.01.2024 - 31.12.2025
-    </p>
-    
+  <div class="container">
+    <div class="card" onclick="location.href='card1.html'">
+      <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+      <p>Дата подписания: 07.04.2025</p>
+      <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+    </div>
+
+    <div class="card" onclick="location.href='card1.html'">
+      <h2>ТОО "Примерная компания 2"</h2>
+      <p>Дата подписания: 08.04.2025</p>
+      <p>ФИО: ИВАНОВ ИВАН ИВАНОВИЧ</p>
+    </div>
+
+    <div class="card" onclick="location.href='card1.html'">
+      <h2>ТОО "Примерная компания 3"</h2>
+      <p>Дата подписания: 09.04.2025</p>
+      <p>ФИО: ПЕТРОВ ПЕТР ПЕТРОВИЧ</p>
+    </div>
+  </div>
+
 </body>
 </html>
