--- a/card1.html
+++ b/card1.html
@@ -9,16 +9,17 @@
 
   <div class="container">
     <div class="card">
+      <h2>Право подписи НПЦ</h2>
       <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
-      <p><strong>Дата подписания, время:</strong> 07.04.2025 11:12</p>
+      <p><strong>Дата подписания, время:</strong> 03.03.2025 11:12</p>
       <p><strong>Юридический адрес:</strong> г. Алматы, пр. Райымбека дом 312</p>
       <p><strong>БИН:</strong> 071140007530</p>
       <p><strong>Свидетельство о НДС:</strong> Серия 60001 №120 4003 от 10.01.2019 г.</p>
       <p><strong>ИИК:</strong> KZ096010131000112013</p>
       <p><strong>Банк:</strong> АО «Народный Банк Казахстана», г.Алматы, ул.Розыбакиева 101, БИК HSBKKZKX</p>
-      <p><strong>Должность:</strong> Начальник отдела по подтверждению соответствия сертификации продукции</p>
-      <p><strong>ФИО на ЭЦП:</strong> ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
-      <p><strong>Сроки действия ЭЦП:</strong> 31.01.2024 - 31.12.2025</p>
+      <p><strong>Должность:</strong> Заведующий Испытательной Лаборатории  </p>
+      <p><strong>ФИО на ЭЦП:</strong> ХАСАНОВ АЛИК РАСИМОВИЧ</p>
+      <p><strong>Сроки действия ЭЦП:</strong> 31.01.2024-31.12.2025</p>
     </div>
   </div>
 
