--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
       <p>Дата подписания: 09.04.2025</p>
       <p>ФИО: ПЕТРОВ ПЕТР ПЕТРОВИЧ</p>
     </div>
+
+    <div class="card" onclick="location.href='card4.html'">
+      <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+      <p>Дата подписания: 17.04.2025</p>
+      <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+    </div>
+    
   </div>
 
 </body>
