--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
       <p>Дата подписания: 23.04.2025</p>
       <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
     </div>
+
+    <div class="card" onclick="location.href='card10.html'">
+      <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+      <p>Дата подписания: 05.05.2025</p>
+      <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+    </div>
+
+    <div class="card" onclick="location.href='card11.html'">
+      <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+      <p>Дата подписания: 28.04.2025</p>
+      <p>ФИО: ХАСАНОВ АЛИК РАСИМОВИЧ</p>
+    </div>
     
   </div>
 
