--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
       <p>Дата подписания: 28.04.2025</p>
       <p>ФИО: ХАСАНОВ АЛИК РАСИМОВИЧ</p>
     </div>
+
+    <div class="card" onclick="location.href='card12.html'">
+      <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+      <p>Дата подписания: 05.05.2025</p>
+      <p>ФИО: ХАСАНОВ АЛИК РАСИМОВИЧ</p>
+    </div>
     
   </div>
 
