--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
       <p>ФИО: ХАСАНОВ АЛИК РАСИМОВИЧ</p>
     </div>
     
+    <div class="card" onclick="location.href='forjansya.html'">
+      <h2>“Свое”</h2>
+    </div>
+    
   </div>
 
 </body>
