--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <p>ФИО: ХАСАНОВ АЛИК РАСИМОВИЧ</p>
     </div>
     
-    <div class="card" onclick="location.href='forjansya.html'">
+    <div hidden class="card" onclick="location.href='forjansya.html'">
       <h2>“Свое”</h2>
     </div>
     
