--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
       <p>Дата подписания: 08.05.2025</p>
       <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
     </div>
+
+    <div class="card" onclick="location.href='card14.html'">
+      <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+      <p>Дата подписания: 12.05.2025</p>
+      <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+    </div>
     
     <div hidden class="card" onclick="location.href='forjansya.html'">
       <h2>“Свое”</h2>
