--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
       <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
     </div>
     
+     <div class="card" onclick="location.href='card16.html'">
+          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+          <p>Дата подписания: 13.05.2025</p>
+          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+        </div>
+    
     <div hidden class="card" onclick="location.href='forjansya.html'">
       <h2>“Свое”</h2>
     </div>
