--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@
           <p>Дата подписания: 14.05.2025</p>
           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
         </div>
+
+    <div class="card" onclick="location.href='card17.html'">
+          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+          <p>Дата подписания: 29.04.2025</p>
+          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+    </div>
     
     <div hidden class="card" onclick="location.href='forjansya.html'">
       <h2>“Свое”</h2>
