--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div class="card" onclick="location.href='card17.html'">
           <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
           <p>Дата подписания: 29.04.2025</p>
-          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+          <p>ФИО: ХАСАНОВ АЛИК РАСИМОВИЧ</p>
     </div>
     
     <div hidden class="card" onclick="location.href='forjansya.html'">
