--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
           <p>Дата подписания: 29.04.2025</p>
           <p>ФИО: ХАСАНОВ АЛИК РАСИМОВИЧ</p>
     </div>
+
+    <div class="card" onclick="location.href='holeday.html'">
+    </div>
     
     <div hidden class="card" onclick="location.href='forjansya.html'">
       <h2>“Свое”</h2>
