--- a/index.html
+++ b/index.html
@@ -110,7 +110,13 @@
           <p>ФИО: ХАСАНОВ АЛИК РАСИМОВИЧ</p>
     </div>
 
-    <div class="card" onclick="location.href='holeday.html'">
+    <div class="card" onclick="location.href='card18.html'">
+          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+          <p>Дата подписания: 03.03.2025</p>
+          <p>ФИО: ХАСАНОВ АЛИК РАСИМОВИЧ</p>
+    </div>
+
+    <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
     <div hidden class="card" onclick="location.href='forjansya.html'">
