--- a/index.html
+++ b/index.html
@@ -116,6 +116,12 @@
           <p>ФИО: ХАСАНОВ АЛИК РАСИМОВИЧ</p>
     </div>
 
+    <div class="card" onclick="location.href='card19.html'">
+          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+          <p>Дата подписания: 15.05.2025</p>
+          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+    </div>
+
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
