--- a/index.html
+++ b/index.html
@@ -133,6 +133,17 @@
           <p>Дата подписания: 20.05.2025</p>
           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
     </div>
+    
+    <div class="card" onclick="location.href='card22.html'">
+          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+          <p>Дата подписания: 15.05.2025</p>
+          <p>ФИО: ХАСАНОВ АЛИК РАСИМОВИЧ</p>
+    </div>
+    <div class="card" onclick="location.href='card23.html'">
+          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+          <p>Дата подписания: 21.05.2025</p>
+          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+    </div>
 
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
