--- a/index.html
+++ b/index.html
@@ -150,7 +150,13 @@
           <p>Дата подписания: 23.05.2025</p>
           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
     </div>
-  
+
+    <div class="card" onclick="location.href='card25.html'">
+          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+          <p>Дата подписания: 26.05.2025</p>
+          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+    </div>
+    
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
