--- a/index.html
+++ b/index.html
@@ -154,6 +154,16 @@
     <div class="card" onclick="location.href='card25.html'">
           <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
           <p>Дата подписания: 26.05.2025</p>
+          <p>ФИО: ХАСАНОВ АЛИК РАСИМОВИЧ</p>
+    </div>
+    <div class="card" onclick="location.href='card25.html'">
+          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+          <p>Дата подписания: 26.05.2025</p>
+          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+    </div>
+    <div class="card" onclick="location.href='card25.html'">
+          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+          <p>Дата подписания: 26.05.2025</p>
           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
     </div>
     
