--- a/index.html
+++ b/index.html
@@ -156,17 +156,21 @@
           <p>Дата подписания: 26.05.2025</p>
           <p>ФИО: ХАСАНОВ АЛИК РАСИМОВИЧ</p>
     </div>
-    <div class="card" onclick="location.href='card25.html'">
+    <div class="card" onclick="location.href='card26.html'">
           <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
-          <p>Дата подписания: 26.05.2025</p>
+          <p>Дата подписания: 27.05.2025</p>
+          <p>ФИО: ХАСАНОВ АЛИК РАСИМОВИЧ</p>
+    </div>
+    <div class="card" onclick="location.href='card27.html'">
+          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+          <p>Дата подписания: 22.05.2025</p>
           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
     </div>
-    <div class="card" onclick="location.href='card25.html'">
+     <div class="card" onclick="location.href='card28.html'">
           <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
-          <p>Дата подписания: 26.05.2025</p>
+          <p>Дата подписания: 23.05.2025</p>
           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
     </div>
-    
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
