--- a/index.html
+++ b/index.html
@@ -171,6 +171,12 @@
           <p>Дата подписания: 23.05.2025</p>
           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
     </div>
+    <div class="card" onclick="location.href='card28.html'">
+              <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+              <p>Дата подписания: 28.05.2025</p>
+              <p>ФИО: ХАСАНОВ АЛИК РАСИМОВИЧ</p>
+        </div>
+    
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
