--- a/index.html
+++ b/index.html
@@ -188,6 +188,12 @@
               <p>Дата подписания: 02.06.2025</p>
               <p>ФИО: ХАСАНОВ АЛИК РАСИМОВИЧ</p>
         </div>
+
+     <div class="card" onclick="location.href='card32.html'">
+              <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+              <p>Дата подписания: 03.06.2025</p>
+              <p>ФИО: ХАСАНОВ АЛИК РАСИМОВИЧ</p>
+        </div>
     
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
