--- a/index.html
+++ b/index.html
@@ -200,6 +200,11 @@
               <p>Дата подписания: 04.06.2025</p>
               <p>ФИО: ХАСАНОВ АЛИК РАСИМОВИЧ</p>
         </div>
+         <div class="card" onclick="location.href='card33.html'">
+              <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+              <p>Дата подписания: 04.06.2025</p>
+              <p>ФИО: ХАСАНОВ АЛИК РАСИМОВИЧ</p>
+        </div>
     
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
