--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
               <p>Дата подписания: 04.06.2025</p>
               <p>ФИО: ХАСАНОВ АЛИК РАСИМОВИЧ</p>
         </div>
-         <div class="card" onclick="location.href='card33.html'">
+         <div class="card" onclick="location.href='card34.html'">
               <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
-              <p>Дата подписания: 04.06.2025</p>
-              <p>ФИО: ХАСАНОВ АЛИК РАСИМОВИЧ</p>
+              <p>Дата подписания: 05.06.2025</p>
+              <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
         </div>
     
     <div hidden class="card" onclick="location.href='holeday.html'">
