--- a/index.html
+++ b/index.html
@@ -182,7 +182,11 @@
               <p>Дата подписания: 29.05.2025</p>
               <p>ФИО: ХАСАНОВ АЛИК РАСИМОВИЧ</p>
         </div>
-
+     <div class="card" onclick="location.href='card31(1).html'">
+              <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+              <p>Дата подписания: 30.05.2025</p>
+              <p>ФИО: ХАСАНОВ АЛИК РАСИМОВИЧ</p>
+        </div>
       <div class="card" onclick="location.href='card31.html'">
               <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
               <p>Дата подписания: 02.06.2025</p>
