--- a/index.html
+++ b/index.html
@@ -209,6 +209,12 @@
               <p>Дата подписания: 05.06.2025</p>
               <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
         </div>
+          <div class="card" onclick="location.href='card34.html'">
+              <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+              <p>Дата подписания: 09.06.2025</p>
+              <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+        </div>
+
     
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
