--- a/index.html
+++ b/index.html
@@ -214,7 +214,11 @@
               <p>Дата подписания: 09.06.2025</p>
               <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
         </div>
-
+          <div class="card" onclick="location.href='card36.html'">
+              <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+              <p>Дата подписания: 10.06.2025</p>
+              <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+        </div>
     
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
