--- a/index.html
+++ b/index.html
@@ -224,9 +224,14 @@
               <p>Дата подписания: 11.06.2025</p>
               <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
         </div>
-                  <div class="card" onclick="location.href='card38.html'">
+              <div class="card" onclick="location.href='card38.html'">
               <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
               <p>Дата подписания: 12.06.2025</p>
+              <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+        </div>
+              <div class="card" onclick="location.href='card39.html'">
+              <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+              <p>Дата подписания: 13.06.2025</p>
               <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
         </div>
     
