--- a/index.html
+++ b/index.html
@@ -240,7 +240,12 @@
               <p>Дата подписания: 16.06.2025</p>
               <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
         </div>
-                  <div class="card" onclick="location.href='card40.html'">
+                  <div class="card" onclick="location.href='card41.html'">
+              <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+              <p>Дата подписания: 17.06.2025</p>
+              <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+        </div>
+        <div class="card" onclick="location.href='card42.html'">
               <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
               <p>Дата подписания: 17.06.2025</p>
               <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
