--- a/index.html
+++ b/index.html
@@ -275,6 +275,11 @@
               <p>Дата подписания: 25.06.2025</p>
               <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
         </div>
+                <div class="card" onclick="location.href='card48.html'">
+              <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+              <p>Дата подписания: 26.06.2025</p>
+              <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+        </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
