--- a/index.html
+++ b/index.html
@@ -280,9 +280,14 @@
               <p>Дата подписания: 26.06.2025</p>
               <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
         </div>
-                    <div class="card" onclick="location.href='card49.html'">
+        <div class="card" onclick="location.href='card49.html'">
               <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
               <p>Дата подписания: 27.06.2025</p>
+              <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+        </div>
+        <div class="card" onclick="location.href='card50.html'">
+              <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+              <p>Дата подписания: 30.06.2025</p>
               <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
         </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
