--- a/index.html
+++ b/index.html
@@ -290,6 +290,11 @@
               <p>Дата подписания: 30.06.2025</p>
               <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
         </div>
+        <div class="card" onclick="location.href='card51.html'">
+              <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+              <p>Дата подписания: 01.07.2025</p>
+              <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+        </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
