--- a/index.html
+++ b/index.html
@@ -321,6 +321,11 @@
               <p>Дата подписания: 09.07.2025</p>
               <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
         </div>
+        <div class="card" onclick="location.href='card57.html'">
+              <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+              <p>Дата подписания: 10.07.2025</p>
+              <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+        </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
