--- a/index.html
+++ b/index.html
@@ -331,6 +331,11 @@
               <p>Дата подписания: 11.07.2025</p>
               <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
         </div>
+        <div class="card" onclick="location.href='card59.html'">
+              <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+              <p>Дата подписания: 14.07.2025</p>
+              <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+        </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
