--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
       <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
     </div>
     
+    <div class="card" onclick="location.href='card6.1.html'">
+      <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+      <p>Дата подписания: 18.04.2025</p>
+      <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+    </div>
+    
     <div class="card" onclick="location.href='card7.html'">
       <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
       <p>Дата подписания: 23.04.2025</p>
