--- a/index.html
+++ b/index.html
@@ -357,6 +357,11 @@
               <p>Дата подписания: 17.07.2025</p>
               <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
         </div>
+        <div class="card" onclick="location.href='card63.html'">
+              <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+              <p>Дата подписания: 18.07.2025</p>
+              <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+        </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
