--- a/index.html
+++ b/index.html
@@ -397,6 +397,11 @@
                   <p>Дата подписания: 29.07.2025</p>
                   <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+            <div class="card" onclick="location.href='card71.html'">
+                  <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                  <p>Дата подписания: 30.07.2025</p>
+                  <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
