--- a/index.html
+++ b/index.html
@@ -409,7 +409,12 @@
             </div>
             <div class="card" onclick="location.href='card73.html'">
                   <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
-                  <p>Дата подписания: 30.07.2025</p>
+                  <p>Дата подписания: 1.07.2025</p>
+                  <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
+                <div class="card" onclick="location.href='card74.html'">
+                  <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                  <p>Дата подписания: 4.07.2025</p>
                   <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
@@ -423,3 +428,4 @@
 
 </body>
 </html>
+
