--- a/index.html
+++ b/index.html
@@ -417,6 +417,12 @@
                   <p>Дата подписания: 4.07.2025</p>
                   <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+            <div class="card" onclick="location.href='card75.html'">
+                  <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                  <p>Дата подписания: 05.07.2025</p>
+                  <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
+    
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -428,4 +434,5 @@
 
 </body>
 </html>
+
 
