--- a/index.html
+++ b/index.html
@@ -427,6 +427,11 @@
                   <p>Дата подписания: 06.07.2025</p>
                   <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+              <div class="card" onclick="location.href='card77.html'">
+                  <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                  <p>Дата подписания: 07.07.2025</p>
+                  <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
     
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
@@ -439,6 +444,7 @@
 
 </body>
 </html>
+
 
 
 
