--- a/index.html
+++ b/index.html
@@ -432,6 +432,11 @@
                   <p>Дата подписания: 07.07.2025</p>
                   <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+            <div class="card" onclick="location.href='card78.html'">
+                  <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                  <p>Дата подписания: 08.07.2025</p>
+                  <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
     
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
@@ -444,6 +449,7 @@
 
 </body>
 </html>
+
 
 
 
