--- a/index.html
+++ b/index.html
@@ -409,32 +409,37 @@
             </div>
             <div class="card" onclick="location.href='card73.html'">
                   <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
-                  <p>Дата подписания: 1.07.2025</p>
+                  <p>Дата подписания: 1.08.2025</p>
                   <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
                 <div class="card" onclick="location.href='card74.html'">
                   <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
-                  <p>Дата подписания: 4.07.2025</p>
+                  <p>Дата подписания: 4.08.2025</p>
                   <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
             <div class="card" onclick="location.href='card75.html'">
                   <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
-                  <p>Дата подписания: 05.07.2025</p>
+                  <p>Дата подписания: 05.08.2025</p>
                   <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
             <div class="card" onclick="location.href='card76.html'">
                   <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
-                  <p>Дата подписания: 06.07.2025</p>
+                  <p>Дата подписания: 06.08.2025</p>
                   <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
               <div class="card" onclick="location.href='card77.html'">
                   <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
-                  <p>Дата подписания: 07.07.2025</p>
+                  <p>Дата подписания: 07.08.2025</p>
                   <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
             <div class="card" onclick="location.href='card78.html'">
                   <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
-                  <p>Дата подписания: 08.07.2025</p>
+                  <p>Дата подписания: 08.08.2025</p>
+                  <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
+            <div class="card" onclick="location.href='card79.html'">
+                  <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                  <p>Дата подписания: 11.08.2025</p>
                   <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
     
@@ -449,6 +454,7 @@
 
 </body>
 </html>
+
 
 
 
