--- a/index.html
+++ b/index.html
@@ -452,6 +452,11 @@
                   <p>Дата подписания: 13.08.2025</p>
                   <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+            <div class="card" onclick="location.href='card82.html'">
+                  <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                  <p>Дата подписания: 14.08.2025</p>
+                  <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
     
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
@@ -464,6 +469,7 @@
 
 </body>
 </html>
+
 
 
 
