--- a/index.html
+++ b/index.html
@@ -457,6 +457,11 @@
                   <p>Дата подписания: 14.08.2025</p>
                   <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+            <div class="card" onclick="location.href='card83.html'">
+                  <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                  <p>Дата подписания: 15.08.2025</p>
+                  <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
     
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
@@ -469,6 +474,7 @@
 
 </body>
 </html>
+
 
 
 
