--- a/index.html
+++ b/index.html
@@ -462,6 +462,11 @@
                   <p>Дата подписания: 15.08.2025</p>
                   <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+            <div class="card" onclick="location.href='card84.html'">
+                  <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                  <p>Дата подписания: 18.08.2025</p>
+                  <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
     
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
@@ -474,6 +479,7 @@
 
 </body>
 </html>
+
 
 
 
