--- a/index.html
+++ b/index.html
@@ -472,7 +472,11 @@
                   <p>Дата подписания: 19.08.2025</p>
                   <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
-    
+            <div class="card" onclick="location.href='card86.html'">
+                  <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                  <p>Дата подписания: 20.08.2025</p>
+                  <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -484,6 +488,7 @@
 
 </body>
 </html>
+
 
 
 
