--- a/index.html
+++ b/index.html
@@ -477,6 +477,11 @@
                   <p>Дата подписания: 20.08.2025</p>
                   <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+            <div class="card" onclick="location.href='card87.html'">
+                  <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                  <p>Дата подписания: 21.08.2025</p>
+                  <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -488,6 +493,7 @@
 
 </body>
 </html>
+
 
 
 
