--- a/index.html
+++ b/index.html
@@ -497,6 +497,11 @@
                   <p>Дата подписания: 26.08.2025</p>
                   <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+            <div class="card" onclick="location.href='card91.html'">
+                  <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                  <p>Дата подписания: 26.08.2025</p>
+                  <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -508,6 +513,7 @@
 
 </body>
 </html>
+
 
 
 
