--- a/index.html
+++ b/index.html
@@ -512,6 +512,11 @@
                   <p>Дата подписания: 28.08.2025</p>
                   <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+                <div class="card" onclick="location.href='card94.html'">
+                  <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                  <p>Дата подписания: 02.09.2025</p>
+                  <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -523,6 +528,7 @@
 
 </body>
 </html>
+
 
 
 
