--- a/index.html
+++ b/index.html
@@ -516,6 +516,11 @@
                   <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
                   <p>Дата подписания: 02.09.2025</p>
                   <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>  
+            <div class="card" onclick="location.href='card93.1.html'">
+                  <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                  <p>Дата подписания: 29.08.2025</p>
+                  <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
@@ -528,6 +533,7 @@
 
 </body>
 </html>
+
 
 
 
