--- a/index.html
+++ b/index.html
@@ -522,6 +522,11 @@
                   <p>Дата подписания: 29.08.2025</p>
                   <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+            <div class="card" onclick="location.href='card95.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 29.08.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                    </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -533,6 +538,7 @@
 
 </body>
 </html>
+
 
 
 
