--- a/card95.html
+++ b/card95.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <title>ТОО “Научно-производственный центр агроинженерии”</title>
   <link rel="stylesheet" href="style.css">
-</head>
+</head> 
 <body>
 
   <div class="container">
     <div class="card">
       <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
-      <p><strong>Дата подписания, время:</strong> 29.08.2025 10:54</p>
+      <p><strong>Дата подписания, время:</strong> 03.09.2025 09:54</p>
       <p><strong>Юридический адрес:</strong> г. Алматы, пр. Райымбека дом 312</p>
-      <p><strong>БИН:</strong> 071140007530</p>
+      <p><strong>БИН:</strong> 071140007530</p> 
       <p><strong>Свидетельство о НДС:</strong> Серия 60001 №120 4003 от 10.01.2019 г.</p>
       <p><strong>ИИК:</strong> KZ096010131000112013</p>
       <p><strong>Банк:</strong> АО «Народный Банк Казахстана», г.Алматы, ул.Розыбакиева 101, БИК HSBKKZKX</p>
@@ -20,7 +20,8 @@
       <p><strong>ФИО на ЭЦП:</strong> ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
       <p><strong>Сроки действия ЭЦП:</strong> 31.01.2024 - 31.12.2025</p>
     </div>
-  </div>
+  </div>2
 
 </body>
 </html>
+
