--- a/index.html
+++ b/index.html
@@ -537,6 +537,12 @@
                           <p>Дата подписания: 05.09.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+    
+            <div class="card" onclick="location.href='card98.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 08.09.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -548,6 +554,7 @@
 
 </body>
 </html>
+
 
 
 
