--- a/index.html
+++ b/index.html
@@ -553,6 +553,11 @@
                           <p>Дата подписания: 10.09.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+            <div class="card" onclick="location.href='card101.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 11.09.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -564,6 +569,7 @@
 
 </body>
 </html>
+
 
 
 
