--- a/index.html
+++ b/index.html
@@ -568,6 +568,11 @@
                           <p>Дата подписания: 15.09.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+            <div class="card" onclick="location.href='card104.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 16.09.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -579,6 +584,7 @@
 
 </body>
 </html>
+
 
 
 
