--- a/index.html
+++ b/index.html
@@ -573,6 +573,11 @@
                           <p>Дата подписания: 16.09.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+            <div class="card" onclick="location.href='card105.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 17.09.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -584,6 +589,7 @@
 
 </body>
 </html>
+
 
 
 
