--- a/index.html
+++ b/index.html
@@ -590,6 +590,12 @@
                           <p>Дата подписания: 19.09.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+
+            <div class="card" onclick="location.href='card108.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 22.09.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -601,6 +607,7 @@
 
 </body>
 </html>
+
 
 
 
