--- a/index.html
+++ b/index.html
@@ -616,6 +616,11 @@
                           <p>Дата подписания: 26.09.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+    <div class="card" onclick="location.href='card113.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 29.09.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -627,6 +632,7 @@
 
 </body>
 </html>
+
 
 
 
