--- a/index.html
+++ b/index.html
@@ -631,14 +631,19 @@
                           <p>Дата подписания: 01.10.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
-            <div class="card" onclick="location.href='card115.html'">
+            <div class="card" onclick="location.href='card116.html'">
                           <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
                           <p>Дата подписания: 02.10.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
-            <div class="card" onclick="location.href='card115.html'">
+            <div class="card" onclick="location.href='card117.html'">
                           <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
                           <p>Дата подписания: 03.10.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
+                <div class="card" onclick="location.href='card118.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 06.10.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
@@ -652,6 +657,7 @@
 
 </body>
 </html>
+
 
 
 
