--- a/index.html
+++ b/index.html
@@ -646,6 +646,11 @@
                           <p>Дата подписания: 06.10.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+                    <div class="card" onclick="location.href='card119.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 07.10.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -657,6 +662,7 @@
 
 </body>
 </html>
+
 
 
 
