--- a/index.html
+++ b/index.html
@@ -651,6 +651,11 @@
                           <p>Дата подписания: 07.10.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+                        <div class="card" onclick="location.href='card120.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 08.10.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -662,6 +667,7 @@
 
 </body>
 </html>
+
 
 
 
