--- a/index.html
+++ b/index.html
@@ -691,6 +691,11 @@
                           <p>Дата подписания: 17.10.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+            <div class="card" onclick="location.href='card128.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 20.10.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -702,6 +707,7 @@
 
 </body>
 </html>
+
 
 
 
