--- a/card128.html
+++ b/card128.html
@@ -20,8 +20,9 @@
       <p><strong>ФИО на ЭЦП:</strong> ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
       <p><strong>Сроки действия ЭЦП:</strong> 31.01.2024 - 31.12.2025</p>
     </div>
-  </div>2
+  </div>
 
 </body>
 </html>
+
 
