--- a/index.html
+++ b/index.html
@@ -759,6 +759,12 @@
                           <p>Дата подписания: 26.11.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+                <div class="card" onclick="location.href='card141.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 05.12.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
+    
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -770,6 +776,7 @@
 
 </body>
 </html>
+
 
 
 
