--- a/index.html
+++ b/index.html
@@ -817,6 +817,11 @@
                           <p>Дата подписания: 14.11.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
                             </div>
+                            <div class="card" onclick="location.href='card154.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 22.12.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                            </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -828,6 +833,7 @@
 
 </body>
 </html>
+
 
 
 
