--- a/index.html
+++ b/index.html
@@ -842,6 +842,21 @@
                           <p>Дата подписания: 21.11.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
                             </div>
+                                  <div class="card" onclick="location.href='card164.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 22.12.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                            </div>
+                            <div class="card" onclick="location.href='card165.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 23.12.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                            </div>
+                                <div class="card" onclick="location.href='card166.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 24.12.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                            </div>
                             <div class="card" onclick="location.href='card158.html'">
                           <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
                           <p>Дата подписания: 25.11.2025</p>
@@ -872,6 +887,7 @@
                           <p>Дата подписания: 30.12.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
                             </div>
+
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -883,6 +899,7 @@
 
 </body>
 </html>
+
 
 
 
