--- a/index.html
+++ b/index.html
@@ -913,6 +913,10 @@
                           <p>Дата подписания: 09.12.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
                             </div>
+                                <div class="card" onclick="location.href='card172.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 31.12.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -924,6 +928,7 @@
 
 </body>
 </html>
+
 
 
 
