--- a/index.html
+++ b/index.html
@@ -934,6 +934,12 @@
                           <p>Дата подписания: 27.11.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
                                 </div>
+
+                                            <div class="card" onclick="location.href='card176.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 13.01.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                                </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -945,6 +951,7 @@
 
 </body>
 </html>
+
 
 
 
