--- a/index.html
+++ b/index.html
@@ -980,6 +980,11 @@
                           <p>Дата подписания: 13.02.2026</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
                                 </div> 
+                                                                           <div class="card" onclick="location.href='card185.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 17.02.2026</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                                </div> 
     
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
@@ -992,6 +997,7 @@
 
 </body>
 </html>
+
 
 
 
