--- a/index.html
+++ b/index.html
@@ -1002,7 +1002,12 @@
                           <p>Дата подписания: 24.02.2026</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
                                 </div>
-    
+
+                                                                                       <div class="card" onclick="location.href='card189.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 25.02.2026</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                                </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -1014,6 +1019,7 @@
 
 </body>
 </html>
+
 
 
 
